crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_write__test__fs_write_single_directory_creation.snap
---
source: crates/forge_services/src/tools/fs/fs_write.rs
expression: normalized_result
snapshot_kind: text
---
---
path: [TEMP_DIR]/new_dir/test.txt
operation: CREATE
total_chars: 23
---
