crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_write__test__fs_write_success.snap
---
source: crates/forge_services/src/tools/fs/fs_write.rs
expression: normalized_output
---
---
path: [TEMP_DIR]/test.txt
operation: CREATE
total_chars: 13
---
