crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_write__test__fs_write_with_overwrite.snap
---
source: crates/forge_services/src/tools/fs/fs_write.rs
expression: normalized_msg
snapshot_kind: text
---
---
path: [TEMP_DIR]/test_overwrite.txt
operation: OVERWRITE
total_chars: 11
---
1        |-Original content
    1    |+New content
